2011-11-22 yusei
* Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.

2011-11-12 yusei
* source_trade and destination_trade must be copied from trade condition to order/delivery.

2011-09-28 yusei
* Improve stock report and show stock also by group.

2011-09-28 yusei
* Improve Base_getBySiteCurrentStockList and support group category.

2011-09-20 tatuya
* Modify Order_zSelectMovement  to make Packing List enable to represent Transfer of rights(ownership). To do this, remove WHERE expression to exclude simulation movements that have same source and destination.

2011-09-15 tatuya
* Fix the issue that Sale Packing List wrongly has Root Applied Rule sometimes when it is created by Delivery Builder with a site which has many activity nodes.

2011-06-23 tatuya
* Show the owner at Inventory module listbox because the inventories can be owned by multiple sections.

2011-06-02 arnaud.fontaine
* Fix issue on stock listbox when there is no unit conversion defined.

2011-05-27 arnaud.fontaine
* Fix stock listbox and add a new column 'order'.

2011-04-14 yusei
* Remove old unnecessary tales expression from relation string fields.

2011-04-04 yusei
* Fix tales expression on property "enabled" of my_view_mode_payment_date. This field cannot be displayed.

2011-03-30 nicolas
* Add internal trade conditions

2010-10-21 yusei
* Add reset movement price action to returned sale packing list.

2010-10-21 yusei
* Add reverse_arrow_category parameter to Order_applyTradeCondition. This option is useful when trade condition is applied to returned packing list.

2010-10-15 nicolas.dumazet
* No restrictions on subtypes of Order portal type

2010-09-30 nicolas.dumazet
* Add abstract Order portal type to be able to create temporary documents of Order portal type.

2010-08-07 JPS
* make the terms match payment condition and capacity property sheets in TradeModelPath_view

2010-07-15 yusei