@@ -56,10 +56,13 @@ Inventory | fast_input
 Inventory | fast_input_update
 Inventory | view
 Order Root Simulation Rule | view
+Organisation | jump_to_internal_trade_condition
 Organisation | jump_to_purchase_order
 Organisation | jump_to_purchase_packing_list
+Organisation | jump_to_purchase_trade_condition
 Organisation | jump_to_sale_order
 Organisation | jump_to_sale_packing_list
+Organisation | jump_to_sale_trade_condition
 Payment Condition | view
 Person | jump_to_purchase_order
 Person | jump_to_purchase_packing_list
