@@ -1,3 +1,6 @@
+2011-12-14 arnaud.fontaine
+* Allow to jump from Organisation to its related Sale Trade Conditions, Purchase Trade Conditions and Internal Trade Conditions.
+
 2011-11-22 yusei
 * Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.
 
